Java 11 related fixes